# docs/swagger.yaml
@@ -432,6 +432,25 @@ paths:
       summary: Login a user
       tags:
       - auth
+  /auth/logout:
+    post:
+      consumes:
+      - application/json
+      description: Logout a user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Logout a user
+      tags:
+      - auth
   /auth/register:
     post:
       consumes:
